# joboffers_apiclient

./: Makefile  README.md  setup.cfg
.github/workflows/: ci.yml
joboffers_api_client/: __about__.py  __init__.py  main.py
joboffers_apiclient/: __about__.py  __init__.py  cli.py  main.py
test/: test_cli.py  test_get_offers.py
