[metadata]
name = joboffers_apiclient
version = 0.0.1
author = Content Gardening Studio
email = info@contentgardeningstudio.com
description = Extracting job offers data using an API
url = https://github.com/ContentGardeningStudio/joboffers_apiclient
project_urls =
    Code=https://github.com/ContentGardeningStudio/joboffers_apiclient
    Issues=https://github.com/ContentGardeningStudio/joboffers_apiclient/issues
    # "Documentation": "https://packaging.python.org/tutorials/distributing-packages/",
    # "Funding": "https://donate.pypi.org",
    # "Say Thanks!": "http://saythanks.io/to/example",
    # "Source": "https://github.com/pypa/sampleproject/",
    # "Tracker": "https://github.com/pypa/sampleproject/issues",
long_description = file: README.md
long_description_content_type = text/markdown
# license = MIT
platforms = any
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    importlib_metadata
    requests
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
     joboffers = joboffers_apiclient.cli:offers
